// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationLink /> when newWindow is true matches its snapshot 1`] = `
<a
  className=
      y-navigationLink
      {
        color: #386cbb;
        cursor: pointer;
        text-decoration: none;
      }
      &:active, &:focus, &:hover {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  href="test.html"
  rel="nofollow noopener noreferrer"
  target="_blank"
>
  link content
</a>
`;

exports[`<NavigationLink /> when unstyled matches its snapshot 1`] = `
<a
  className=
      y-navigationLink
      {
        color: inherit;
        cursor: pointer;
        text-decoration: none;
      }
  href="test.html"
>
  link content
</a>
`;

exports[`<NavigationLink /> with additional className matches its snapshot 1`] = `
<a
  className=
      y-navigationLink
      TEST_CLASSNAME
      {
        color: #386cbb;
        cursor: pointer;
        text-decoration: none;
      }
      &:active, &:focus, &:hover {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  href="test.html"
>
  test content
</a>
`;

exports[`<NavigationLink /> with ariaCurrent matches its snapshot 1`] = `
<a
  aria-current="page"
  className=
      y-navigationLink
      {
        color: #386cbb;
        cursor: pointer;
        text-decoration: none;
      }
      &:active, &:focus, &:hover {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  href="test.html"
>
  link content
</a>
`;

exports[`<NavigationLink /> with ariaLabel matches its snapshot 1`] = `
<a
  aria-label="ARIA LABEL CONTENT"
  className=
      y-navigationLink
      {
        color: #386cbb;
        cursor: pointer;
        text-decoration: none;
      }
      &:active, &:focus, &:hover {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  href="test.html"
>
  link content
</a>
`;

exports[`<NavigationLink /> with block={true} matches its snapshot 1`] = `
<a
  className=
      y-navigationLink
      {
        color: #386cbb;
        cursor: pointer;
        display: block;
        text-decoration: none;
      }
      &:active, &:focus, &:hover {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  href="test.html"
>
  test content
</a>
`;

exports[`<NavigationLink /> with default options matches its snapshot 1`] = `
<a
  className=
      y-navigationLink
      {
        color: #386cbb;
        cursor: pointer;
        text-decoration: none;
      }
      &:active, &:focus, &:hover {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  href="test.html"
>
  link content
</a>
`;

exports[`<NavigationLink /> with title matches its snapshot 1`] = `
<a
  className=
      y-navigationLink
      {
        color: #386cbb;
        cursor: pointer;
        text-decoration: none;
      }
      &:active, &:focus, &:hover {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  href="test.html"
  title="TITLE CONTENT"
>
  link content
</a>
`;
